# project-cars

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO  docker-compose.override.yml  docker-compose.yml  pyproject.toml
nginx/: default.conf
scripts/: entrypoint.sh
src/apps/cars/: admin.py  apps.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py
src/apps/cars/migrations/: 0001_initial.py  0002_car_owner.py  0003_alter_brand_options.py  0004_alter_brand_options.py
src/apps/site_setup/: admin.py  apps.py  forms.py  models.py  signals.py
src/apps/site_setup/migrations/: 0001_initial.py  0002_setup_address_setup_email_setup_facebook_url_and_more.py  0003_setup_description.py  0004_setup_header_subtitle_setup_header_title.py  0005_setup_about.py
src/apps/site_setup/templatetags/: custom_tags.py
src/apps/users/: admin.py  apps.py  forms.py  mixins.py  urls.py  views.py
src/core/: settings.py  urls.py  views.py
src/static/js/: scripts copy.js
src/templates/partials/: footer.html  navbar.html
src/utils/: context_processors.py  gemini_tools.py  image_tools.py  statistic_tools.py
