[project]
name = "django-cars"
version = "0.1.0"
description = ""
authors = [
    {name = "tperons",email = "tperons@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "google-genai (>=1.32.0,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
